--- a/kotlin-coroutines-repository/gradle/wrapper/gradle-wrapper.properties
+++ b/kotlin-coroutines-repository/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Sep 15 19:10:33 PDT 2018
+#Fri Oct 05 11:33:55 EDT 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
